--- a/BMPCompressor/makefile
+++ b/BMPCompressor/makefile
@@ -3,5 +3,7 @@ all:
 	gcc -c compressor.c
 	gcc -o compressor.exe functions.c compressor.o
 
+# For some reason maybe the 'make run' command will not work. Please, run manually by 
+# entering './compressor.exe' command on your terminal
 run:
 	./compressor.exe
