--- a/BMPCompressor/makefile
+++ b/BMPCompressor/makefile
@@ -1,7 +1,7 @@
 all:
-	gcc -c functions.c
-	gcc -c compressor.c
-	gcc -o compressor.exe functions.c compressor.o
+	gcc -g -c compressor.c
+	gcc -g -c functions.c
+	gcc -g -o compressor.exe functions.c compressor.o
 
 # For some reason maybe the 'make run' command will not work. Please, run manually by 
 # entering './compressor.exe' command on your terminal
