changed compile params

--- a/BMPCompressor/makefile
+++ b/BMPCompressor/makefile
@@ -2,14 +2,16 @@ all:
 	
 	gcc -g -c compressor.c
 	gcc -g -c functions.c
-	gcc -g -o compressor.exe functions.c compressor.o -lm
+	gcc -g -o compressor functions.c compressor.o -lm
 
 # For some reason maybe the 'make run' command will not work. Please, run manually by 
 # entering './compressor.exe' command on your terminal
 run:
-	./compressor.exe
+
+	./compressor
 
 teste:
+
 	gcc -g -c teste.c
 	gcc -g -c functions.c
-	gcc -g -o teste.exe functions.c teste.o -lm
+	gcc -g -o teste functions.c teste.o -lm
