--- a/BMPCompressor/makefile
+++ b/BMPCompressor/makefile
@@ -1,8 +1,14 @@
-all:
+#all:
 	
-	gcc -g -c compressor.c
+#	gcc -g -c compressor.c
+#	gcc -g -c functions.c
+#	gcc -g -o compressor functions.c compressor.o -lm
+
+all:
+	 
+	gcc -g -c main.c
 	gcc -g -c functions.c
-	gcc -g -o compressor functions.c compressor.o -lm
+	gcc -g -o program functions.c main.o -lm
 
 # For some reason maybe the 'make run' command will not work. Please, run manually by 
 # entering './compressor' command on your terminal
@@ -19,9 +25,3 @@ teste:
 	gcc -g -c testeDCT.c
 	gcc -g -c functions.c
 	gcc -g -o teste.exe functions.c testeDCT.o -lm
-
-all2:
-	 
-	gcc -g -c main.c
-	gcc -g -c functions.c
-	gcc -g -o program functions.c main.o -lm
