--- a/BMPCompressor/makefile
+++ b/BMPCompressor/makefile
@@ -1,9 +1,3 @@
-#all:
-	
-#	gcc -g -c compressor.c
-#	gcc -g -c functions.c
-#	gcc -g -o compressor functions.c compressor.o -lm
-
 all:
 	 
 	gcc -g -c main.c
@@ -11,17 +5,11 @@ all:
 	gcc -g -o program functions.c main.o -lm
 
 # For some reason maybe the 'make run' command will not work. Please, run manually by 
-# entering './compressor' command on your terminal
+# entering './program' command on your terminal
 run:
 
-	./compressor
+	./program
 
 clean:
 	rm *.o
 	rm *.exe
-
-teste:
-	
-	gcc -g -c testeDCT.c
-	gcc -g -c functions.c
-	gcc -g -o teste.exe functions.c testeDCT.o -lm
