added new tasks to make clean

--- a/Compressor and Descompressor/Makefile
+++ b/Compressor and Descompressor/Makefile
@@ -2,14 +2,16 @@ all:
 	 
 	gcc -g -c main.c
 	gcc -g -c functions.c
-	gcc -g -o program functions.c main.o -lm
+	gcc -g -o program.exe functions.c main.o -lm
 
 # For some reason maybe the 'make run' command will not work. Please, run manually by 
 # entering './program' command on your terminal
 run:
 
-	./program
+	./program.exe
 
 clean:
-	rm *.o
 	rm *.exe
+	rm *.o
+	rm *.bmp
+	rm *.bin
