Update makefile to remove .exe files

--- a/Compressor and Descompressor/Makefile
+++ b/Compressor and Descompressor/Makefile
@@ -2,18 +2,20 @@ all:
 	 
 	gcc -Wall -c main.c -g
 	gcc -Wall -c functions.c -g
-	gcc -Wall -o program functions.c main.o -lm -g
+	gcc -Wall -o program.exe functions.c main.o -lm -g
 
 # For some reason maybe the 'make run' command will not work. Please, run manually by 
-# entering './program' command on your terminal
+# entering './program.exe' command on your terminal
 run:
 
-	./program
+	./program.exe
 
 clean:
+	
 	rm *.o
 	rm *.bin
 	rm *.bmp
+	rm *.exe
 
 valgrind: 
 	valgrind --log-file="valgrindOutput.txt" --leak-check=full ./program
